<resources>
    <string name="app_name">WayOfLife</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="nome">Nome</string>
    <string name="cognome">Cognome</string>
    <string name="sesso">Sesso (M/F)</string>
    <string name="activityRecognition">Activity Recognition</string>
    <string name="conferma">Conferma</string>
    <string name="fineAllenamento">Fine Allenamento</string>
    <string name="ciclismo">Ciclismo</string>
    <string name="camminata">Camminata</string>
    <string name="corsa">Corsa</string>
    <string name="pushup">Flessioni</string>
    <string name="freestyle">Freestyle</string>
    <string name="altro">Altro</string>
    <string name="allenamenti">Allenamenti</string>
    <string name="intro_allenamenti">Premi su una delle attività per iniziare un allenamento</string>
    <string name="peso">Peso (in Kg)</string>
    <string name="altezza">Altezza (in cm)</string>
    <string name="aggiornaProfilo">Aggiorna dati del profilo</string>
    <string name="nickname">Nickname</string>
    <string name="infoAT">Servizio che permette di rilevare in background l`attività eseguita.\nPer il corretto funzionamento del servizio é necessario tenere aperta l\'applicazione in background e attivare il servizio utilizzando lo switch dedicato. \n\nSi ha la possibilità di rilevare 3 attività differenti:     \n        Corsa     \n        Camminata     \n        Ciclismo  \n        \nOgni attività può essere rilevata indipendentemente dalle altre. \nUtilizzando quindi gli switch dedicati si ha la possibilità di attivare e disattivare il riconoscimento delle sole attività d\'interesse.\n\nNel momento in cui un\'attività viene riconosciuta viene inviata una notifica che indica l\'attività che si sta eseguendo. \nPremendo poi sulla notifica si ha la possibilità di attivare direttamente un\'allenamento specifico per l\'attività appena riconosciuta.</string>
    <string name="info">Info</string>
    <string name="scegli_allenamento">Scegli allenamento:</string>
    <string name="basket">Basket</string>
    <string name="calcio">Calcio</string>
    <string name="nuoto">Nuoto</string>
    <string name="scalini">Scalini</string>
    <string name="tennis">Tennis</string>
    <string name="reviewAllenamenti">Visualizza i tuoi \nallenamenti</string>
    <string name="play">Play</string>
    <string name="pausa">Pausa</string>
    <string name="fine">Fine</string>
    <string name="zero">0</string>
    <string name="infoPushup">Servizio che permette di rilevare in modo automatico quante flessioni vengono fatte utilizzando il sensore di prossimità del telefono (posto in prossimità della fotocamera posteriore)\n\nPer il corretto funzionamento: \n    Mettere il telefono per terra, con lo schermo direzionato verso l\'alto, mettendolo all\'altezza del petto.\n    Iniziare l\'esercizio ponendosi sopra al dispositivo\n    Iniziare la discesa portando il petto verso il dispositivo posizionato a terra\n    Sollevarsi completando il movimento e allontanandosi dal pavimento.\n\nIn questo modo le flessioni verranno contate in modo automatico.\n\nIn alternativa, si ha anche la possibilità di aggiungere manualmente le flessioni fatte, premendo in qualsiasi punto dello schermo.\nIn caso di errore, si ha la possibilità di decrementare il contatore totale utilizzando il bottone destinato (posto in basso a destra).</string>
    <string name="history">Cronologia Workout</string>
    <string name="cercaData">DATA</string>
    <string name="benvenuti_su">Benvenuti su</string>
    <string name="prossimo">Prossimo</string>
    <string name="datiProfilo">Inserisci i dati per completare il profilo!</string>
    <string name="salva">Salva</string>
    <string name="intro_kcal">0 kcal</string>
    <string name="data">Data:</string>
    <string name="durata">Durata:</string>
    <string name="resoconto_allenamento">Resoconto Allenamento!</string>
    <string name="intro_km">0 km</string>
    <string name="numero_di_squat">Numero di squat</string>
    <string name="squat">Squat</string>
    <string name="info_squat">Servizio che permette di rilevare in modo automatico quante squat vengono fatti utilizzando i sensori del dispositivo. In particolare viene utilizzato l\'accellerometro\n\nPer il corretto funzionamento: \n    Dispetendere le braccia tenendo in mano il telefono in modo che sia perpendicolare al terreno\n    Effettuare uno squat completo (fase di discesa + fase di salita) tenendo sempre le braccia tese\n\nIn questo modo gli squat verranno contati in modo automatico.\n\nIn alternativa, si ha anche la possibilità di aggiungere manualmente gli squat fatti, premendo in qualsiasi punto dello schermo.\nIn caso di errore, si ha la possibilità di decrementare il contatore totale utilizzando il bottone destinato (posto in basso a destra)</string>
    <string name="gps">Per il completo funzionamento dell\'allenamento è necessario attivare la geolocalizzazione sul dispositivo.\n\nSenza la geolocalizzazione non sarà possibile ottenere i chilometri percorsi e il percorso che è stato fatto durante l\'allenamento!</string>
    <string name="end_workout_info">Abbandonando questa pagina perderai tutti i progressi fatti fino a questo momento.\n\nSei sicuro di voler tornare indietro?</string>
    <string name="calorie">Calorie bruciate:</string>
    <string name="percentuale_massa_grassa">Massa Grassa (%)</string>
    <string name="durata_allenamento">Durata allenamento\n(in Min)</string>
    <string name="effetto_termico">Effetto Termico del Cibo</string>
    <string name="indice_di_attivita">Indice di Attività</string>
    <string name="bilancio_energetico">Bilancio Energetico</string>
    <string name="numero_di_allenamenti">Numero allenamenti\n(Settimanali)</string>
    <string name="indice_attivita">Il valore di \"Indice di attività\" indica la tua tendenza a fare movimento durante la giornata. Considera anche se si svolge un lavoro in piedi (piuttosto che uno seduto), oppure se cammini spesso durante la giornata.  Questi parametri influenzeranno i valori che risulteranno successivamente dalla tabella dei macronutrienti.</string>
    <string name="effetto_termico_cibo">Il termine \"Effetto Termico del Cibo\" indica la qualità dell\'alimentazione che quotidianamente tieni.\nIn base alla voce che selezionerai cambieranno i valori visualizzati nella tabella sottostante. \n\nQuesto perché un alimentazione diversa porta a un diverso metabolismo e quindi a un conseguente consumo calorico differente durante la giornata.</string>
    <string name="bilancio_energetico_complessivo">Con il termine \"bilancio energetico\" si intente l\'obiettivo che si ha la necessità di raggiungere con questo piano alimentare.\nSe si ha la necessità di prendere peso allora si può optare per una fase di massa.\nSe, invece, si vuole perdere peso o si vuole perdere massa grassa allora é consigliabile fare una fase di definizione o definizione aggressiva.\n\nQualsiasi valore si scelga é importante sostenere la dieta per un periodo di almeno 2/3 settimane prima di aggiornare i valori.</string>
    <string name="kcal_da_calcolare">Kcal da calcolare</string>
    <string name="carboidrati">Carboidrati</string>
    <string name="proteine">Proteine</string>
    <string name="grassi">Grassi</string>
    <string name="obiettivo">Obiettivo</string>
    <string name="minimo">Minimo</string>
    <string name="massimo">Massimo</string>
    <string name="obiettivo_calorie">Calorie</string>
    <string name="intake">Calcola il tuo intake calorico!</string>
    <string name="fabbisogno_giornaliero">Inserisci i dati e calcola il tuo fabbisogno calorico giornaliero!</string>
    <string name="valutazione_allenamento">Inserisci una valutazione all\'allenamento:</string>
    <string name="nome_allenamento">Inserisci un nome all\'allenamento:</string>
    <string name="scegli_indice_attivita">Scegli il tuo Indice di Attività</string>
    <string name="sedentario">Sedentario</string>
    <string name="sedentario_text">Non cammini se non dentro casa.\nTi alleni 1/2 volte a settimana.</string>
    <string name="sedentario_plus">Sedentario Plus</string>
    <string name="sedentario_plus_text">Cammini poco.\nTi alleni 3 volte a settimana.</string>
    <string name="attivita_media">Attività Media</string>
    <string name="attivita_media_text">Cammini almeno 30 minuti al giorno.\nLavori in piedi.\nTi alleni 3 volte a settimana.</string>
    <string name="attivita_moderata">Attività Moderata</string>
    <string name="attivita_moderata_text">Cammini per più di 1 ora al giorno.\nTi alleni 4/5 volte a settimana.</string>
    <string name="attivita_elevata">Attività Elevata</string>
    <string name="attivita_elevata_text">Cammini per più di 1 ora al giorno.\nTi alleni tutti i giorni.</string>
    <string name="indica_la_tua_alimentazione">Indica la tua Alimentazione</string>
    <string name="mangi_di_tutto">Mangi di Tutto</string>
    <string name="mangi_di_tutto_text">A volte mangi male (cibi confezionati)\nA volte non arrivi alla tua quota proteica.</string>
    <string name="mangi_mediamente_pulito">Mangi mediamente Pulito</string>
    <string name="mangi_mediamente_pulito_text">80% pulito e 20% sporco\nArrivi sempre alla quota proteica</string>
    <string name="mangi_pulito">Mangi Pulito</string>
    <string name="mangi_pulito_text">Sgarri meno di una volta a settimana\nSorpassi spesso la quota proteica</string>
    <string name="scegli_obiettivo">Scegli il tuo Obiettivo</string>
    <string name="definizione_aggressiva">Definizione Aggressiva</string>
    <string name="definizione_aggressiva_text">30% di deficit calorico</string>
    <string name="definizione">Definizione</string>
    <string name="definizione_text">20% di deficit calorico</string>
    <string name="mantenimento">Mantenimento</string>
    <string name="mantenimento_text">No deficit - No surplus</string>
    <string name="massa_magra">Massa Magra</string>
    <string name="massa_magra_text">5% di surplus calorico</string>
    <string name="massa_spinta">Massa Spinta</string>
    <string name="massa_spinta_text">10% di surplus calorico</string>
    <string name="min">Min</string>
    <string name="settimanali">Settimanali</string>
    <string name="tips">Tips</string>
    <string name="profilo_utente">Profilo Utente</string>
    <string name="peso_in_kg">Peso in KG</string>
    <string name="numero_di_flessioni">Numero di flessioni</string>
    <string name="nomeallenamento">NomeAllenamento</string>
    <string name="tipologiaallenamento">Tipologia Allenamento</string>
    <string name="trattino">-</string>
    <string name="dati_da_cambiare">Inserire solo i dati che si vuole cambiare</string>
</resources>