<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="16dp"
    android:background="@drawable/background_white_corners">

    <ImageView
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:src="@drawable/ic_muscle_color"
        android:id="@+id/image"
        android:paddingEnd="10dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/allenamenti"
            android:textColor="#000"
            android:textStyle="bold"
            android:layout_margin="5dp"
            android:textSize="20sp"
            android:id="@+id/titolo"
            android:fontFamily="@font/candara" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/data"
            android:textColor="#a9a9a9"
            android:textStyle="italic"
            android:fontFamily="@font/candara"
            android:layout_margin="5dp"
            android:textSize="15sp"
            android:id="@+id/data"
            android:paddingEnd="15dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/durata"
            android:textColor="#a9a9a9"
            android:layout_margin="5dp"
            android:textSize="15sp"
            android:id="@+id/durata"
            android:textStyle="italic"
            android:fontFamily="@font/candara"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/calorie"
            android:textColor="#a9a9a9"
            android:layout_margin="5dp"
            android:textSize="15sp"
            android:id="@+id/calorie"
            android:textStyle="italic"
            android:fontFamily="@font/candara"/>

    </LinearLayout>

</LinearLayout>